--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "storybook-addon-pseudo-states": "^2.1.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@storybook/addon-backgrounds": "^7.6.9",
     "@storybook/addon-essentials": "^7.6.8",
     "@storybook/addon-interactions": "^7.6.8",
     "@storybook/addon-links": "^7.6.8",
     "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/addon-themes": "^7.6.9",
     "@storybook/blocks": "^7.6.8",
+    "@storybook/icons": "^1.2.3",
     "@storybook/nextjs": "^7.6.8",
     "@storybook/react": "^7.6.8",
     "@storybook/test": "^7.6.8",
@@ -38,7 +42,9 @@
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.8",
+    "storybook-dark-mode": "^3.0.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
