--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
+"lint-staged": {
+  "*.{ts,tsx,js,jsx}": [
+    "next lint",
+    "prettier --write"
+  ],
+  "*.mdx": ["sh .husky/last-updated"]
+},
+
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -18,7 +28,6 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "storybook-addon-pseudo-states": "^2.1.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -41,10 +50,13 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.8",
     "storybook-dark-mode": "^3.0.3",
+    "storybook-addon-pseudo-states": "^2.1.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
