--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
 "lint-staged": {
   "*.{ts,tsx,js,jsx}": [
-    "next lint",
+    "eslint --fix",
     "prettier --write"
   ],
   "*.mdx": ["sh .husky/last-updated"]
