--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
-"lint-staged": {
-  "*.{ts,tsx,js,jsx}": [
-    "eslint --fix",
-    "prettier --write"
-  ],
-  "*.mdx": ["sh .husky/last-updated"]
-},
-
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.mdx": [
+      "sh .husky/last-updated"
+    ]
+  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -46,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
@@ -55,8 +57,8 @@
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.8",
-    "storybook-dark-mode": "^3.0.3",
     "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook-dark-mode": "^3.0.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
