--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "ui-foundation-lib",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "build:lib": "rollup -c",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky install",
@@ -33,6 +36,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-backgrounds": "^7.6.9",
     "@storybook/addon-essentials": "^7.6.8",
     "@storybook/addon-interactions": "^7.6.8",
@@ -56,6 +63,12 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "rollup": "^4.9.5",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-sizes": "^1.0.6",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "storybook": "^7.6.8",
     "storybook-addon-pseudo-states": "^2.1.2",
     "storybook-dark-mode": "^3.0.3",
