--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/src/index.d.ts",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,11 +30,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.311.0",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "peerDependencies": {
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -64,8 +67,10 @@
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "rollup": "^4.9.5",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-sizes": "^1.0.6",
     "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-visualizer": "^5.12.0",
