--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,15 +26,15 @@
     ],
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["*"]
-    }
+      "@/*": ["*"],
+    },
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/docs/utils/colorPaletteRef.js"
+    "src/docs/utils/colorPaletteRef.js",
   ],
-  "exclude": ["node_modules", "tmp", "*/.stories.*"],
+  "exclude": ["node_modules", "tmp", "**/*.stories.*"], // Add Test Cases if Needed
 }
