--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-foundation-lib",
+  "name": "@chunchunmaru/ui-foundation-lib",
   "version": "0.1.0",
   "private": true,
   "main": "dist/cjs/index.js",
